@@ -1,9 +1,16 @@
-img {
+.height-contain {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	height: 800px;
 	width: auto;
+}
+.width-contain {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	height: auto;
+	width: 1500px;
 }
 
 p {
