@@ -1,3 +1,8 @@
+1/2/2021
+================
+* Fixed a bug where pressing the right arrow key at the end of a doujin will continue to the next (non-existent) page, returning a 500.
+* Pressing the 'f' key will now toggle zoom (like on nhentai.net)
+
 12/30/2020
 ================
 * Added doujin filtering by tag. Prefix the searched tag with a hash (#).
